[tool.poetry]
name = "bokeh-modbus"
version = "0.1.0"
description = "A simple Bokeh server app visualizing Modbus data"
authors = ["Brian McClune <bpmcclune@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pymodbus = {version = "^3.0.0*", allow-prereleases = true}
bokeh = {version = "^3.0.0*", allow-prereleases = true}
numpy = "^1.22.3"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.13.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
